--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 		<h1>NFL Season Records!</h1>
-		<p>Type in your favorite team's name!</p>
+		<p id="instructions">Type in your favorite team's name!</p>
 		<input type="text" placeholder="falcons, cowboys, 49ers..." id="team">
 		<!-- <button id="submit">Find My Team</button> -->
 
@@ -32,6 +32,10 @@
 		
 		</div>
 
-<footer>This site was created by Tyler Stauss for non-commercial purposes with the <a href="http://www.espn.com">ESPN.com</a> Developer API.</footer>
+	<footer>
+		<div id="credit">
+			<p>This site was created by Tyler Stauss for non-commercial purposes<br> with the <a href="http://www.espn.com">ESPN.com</a> Developer API.</p>
+		</div>	
+	</footer>
 </body>
 </html>
